manifests/bases/transmission/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  labels:
    app.kubernetes.io/name: transmission
    app.kubernetes.io/instance: transmission
    app.kubernetes.io/version: 3.00-r2
spec:
  type: ClusterIP
  ports:
  - port: 9091
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: transmission
    app.kubernetes.io/instance: transmission
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-bittorrent
  labels:
    app.kubernetes.io/name: transmission
    app.kubernetes.io/instance: transmission
    app.kubernetes.io/version: 3.00-r2
spec:
  type: ClusterIP
  ports:
  - port: 51413
    targetPort: 51413
    protocol: TCP
    name: bittorrent
  selector:
    app.kubernetes.io/name: transmission
    app.kubernetes.io/instance: transmission
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-utp
  labels:
    app.kubernetes.io/name: transmission
    app.kubernetes.io/instance: transmission
    app.kubernetes.io/version: 3.00-r2
spec:
  type: ClusterIP
  ports:
  - port: 51413
    targetPort: 51413
    protocol: UDP
    name: utp
  selector:
    app.kubernetes.io/name: transmission
    app.kubernetes.io/instance: transmission
