manifests/bases/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  labels:
    app.kubernetes.io/name: transmission
    app.kubernetes.io/instance: transmission
    app.kubernetes.io/version: 3.00-r2
spec:
  rules:
    - http:
        paths:
          - path: "/"
            backend:
              service:
                name: transmission
                port:
                  number: 9091
